core/libycp/testsuite/tests/modules/nameofmoduleconst.ycp
{
  import "YModule";

  YModule::cag = 27;	// error

  return YModule::cag == 1;
}
